# CodeRetrieval

./: .gitignore  demo_rag_expert.py  pyproject.toml
data_pipeline/: fetch_data.py  map_intents.py
lsp_retriever/: __init__.py  benchmark.py  handpicked_tests.py  lsp_client.py  main.py  search_engine.py
rag_system/: main.py  model_manager.py
retriever/: indexer.py  parser_setup.py  search_engine.py
src/: main.py
training/: evaluate.py  intent_classifier.py  ner_model.py
